<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="plusone.plusone.MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="400dp"
        android:stretchColumns="*">


        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="50dp">

            <EditText
                android:id="@+id/editTextSearchHome"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:hint="@string/editTextSearch"
                android:inputType="textNoSuggestions|textVisiblePassword" />

            <ImageButton
                android:id="@+id/imageButtonSearchHome"
                android:layout_width="50dp"
                android:layout_toRightOf="@+id/editTextSearchHome"
                app:srcCompat="@android:drawable/ic_menu_search" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="fill_parent">

            <Button
                android:id="@+id/buttonSportsEvents"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/sport_event" />

            <Button
                android:id="@+id/buttonFood"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/food" />

            <Button
                android:id="@+id/buttonParty"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/party" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="fill_parent">


            <Button
                android:id="@+id/buttonEntertainment"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/entertainment" />

            <Button
                android:id="@+id/buttonLearning"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/learning" />

            <Button
                android:id="@+id/buttonOthers"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/others" />
        </TableRow>

    </TableLayout>


    <!--        ///android:layout_width="wrap_content"
                ///android:layout_height="wrap_content"
               /// android:layout_marginLeft="100dp"
                ///android:layout_marginRight="100dp"
                ///android:layout_marginTop="300dp"
                android:ems="10"
                android:hint="@string/prompt_search" />-->


    <ImageView
        android:id="@+id/plusoneImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="50dp"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/plusnav" />

    <ImageButton
        android:id="@+id/imageButtonAddEvent2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="top"
        android:layout_marginLeft="315dp"
        android:layout_toRightOf="@+id/editTextSearchHome"
        android:layout_marginTop="350dp"
        android:layout_weight="100"
        app:srcCompat="@android:drawable/ic_menu_add" />


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            android:visibility="gone"/>

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_main" />


</android.support.design.widget.CoordinatorLayout>
