<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*"

    app:layout_constraintBottom_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:layout_constraintBottom_creator="1"
    tools:layout_constraintLeft_creator="1"
    tools:layout_constraintRight_creator="1"
    tools:layout_constraintTop_creator="1"

    tools:context="plusone.plusone.EventCreateActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="9dp">

        <TextView
            android:id="@+id/textViewEventName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/eventName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:ems="10"
            android:inputType="textNoSuggestions|textVisiblePassword"
            />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="9dp">

        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Description"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textNoSuggestions|textVisiblePassword"
            />


    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="9dp">

        <Button
            android:id="@+id/textViewTimeStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="funDate"
            android:text="@string/timeStart" />
        <Button
            android:id="@+id/eventEndsAtButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="funDate"
            android:text="@string/timeEnd" />
    </TableRow>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="9dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textSize="20dp" />


            <EditText
                android:id="@+id/eventAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />

            <ImageButton
                android:id="@+id/addAddressButon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_dialog_map" />

        </LinearLayout>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="9dp">

        <TextView
            android:id="@+id/textViewEventType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textSize="20dp" />

        <Spinner
            android:id="@+id/eventType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/arrayEventTypes"
            android:gravity="center" />


    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="9dp">

        <TextView
            android:id="@+id/textViewPeopleNeeded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PeopleNeeded"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/peopleNeeded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />
    </TableRow>

        <Button
            android:id="@+id/createEventButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Create"
            android:layout_marginTop="20dp"
            android:layout_marginRight="100dp"
            android:layout_marginLeft="100dp"/>



</TableLayout>
